# pygmars

./: AUTHORS.rst  CHANGELOG.rst  NOTICE  README.rst  configure.bat  setup.cfg
nltk/: __init__.py  grammar.py  internals.py  tree.py
nltk/chunk/: __init__.py  regexp.py
nltk/tag/: __init__.py  sequential.py
nltk/test/: test_chunk_doctest.py  test_tag_doctest.py  test_tree_doctest.py
nltk/test/unit/: test_chunk.py
src/pygmars/: __init__.py  lex.py  parse.py  tree.py
tests/: test_chunk.py  test_chunk_doctest.py  test_lex.py  test_lex_doctest.py  test_parse.py  test_parse_doctest.py  test_tag_doctest.py  test_tree_doctest.py
