[metadata]
license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst

name = pygmars
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Craft simple regex-based small language lexers and parsers. Build parsers from grammars and accept Pygments lexers as an input. Derived from NLTK.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/pygmars
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    utilities

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1
